// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders the nav with buttons 1`] = `
<div>
  <nav
    class="lbhSimplePagination"
  >
    <a
      class="lbhSimplePaginationLink"
      href="/prev"
    >
      <svg
        fill="none"
        height="19"
        viewBox="0 0 11 19"
        width="11"
      >
        <path
          d="M10 1L2 9.5L10 18"
          stroke-width="2"
        />
      </svg>
      Prev
    </a>
    <a
      class="lbhSimplePaginationLink lbhSimplePaginationLinkNext"
      href="/next"
    >
      Next
      <svg
        fill="none"
        height="19"
        viewBox="0 0 11 19"
        width="11"
      >
        <path
          d="M1 18L9 9.5L1 1"
          stroke-width="2"
        />
      </svg>
    </a>
  </nav>
</div>
`;

exports[`it renders the nav with buttons and titles 1`] = `
<div>
  <nav
    class="lbhSimplePagination"
  >
    <a
      class="lbhSimplePaginationLink"
      href="/prev"
    >
      <svg
        fill="none"
        height="19"
        viewBox="0 0 11 19"
        width="11"
      >
        <path
          d="M10 1L2 9.5L10 18"
          stroke-width="2"
        />
      </svg>
      Prev
      <span
        class="lbhSimplePaginationTitle"
      >
        1 of 3
      </span>
    </a>
    <a
      class="lbhSimplePaginationLink lbhSimplePaginationLinkNext"
      href="/next"
    >
      Next
      <span
        class="lbhSimplePaginationTitle"
      >
        3 of 3
      </span>
      <svg
        fill="none"
        height="19"
        viewBox="0 0 11 19"
        width="11"
      >
        <path
          d="M1 18L9 9.5L1 1"
          stroke-width="2"
        />
      </svg>
    </a>
  </nav>
</div>
`;
